[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/shop.gd" type="Script" id=1]
[ext_resource path="res://icons/titles/shop.png" type="Texture" id=2]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="C1" type="VBoxContainer" parent="."]
margin_right = 750.0
margin_bottom = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="C1"]
margin_right = 42.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="CLabel" type="CenterContainer" parent="C1"]
margin_top = 24.0
margin_right = 750.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="LabelGold" type="Label" parent="C1/CLabel"]
margin_left = 358.0
margin_right = 392.0
margin_bottom = 14.0
text = "Gold:"

[node name="CTitle" type="CenterContainer" parent="C1"]
margin_top = 42.0
margin_right = 750.0
margin_bottom = 394.0
size_flags_vertical = 3

[node name="Title" type="Sprite" parent="C1/CTitle"]
texture = ExtResource( 2 )
offset = Vector2( 375, 150 )

[node name="ShopItems" type="GridContainer" parent="C1"]
margin_top = 398.0
margin_right = 750.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="XPBoost" type="VBoxContainer" parent="C1/ShopItems"]
margin_right = 146.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="C1/ShopItems/XPBoost"]
margin_right = 146.0
margin_bottom = 14.0
text = "XP boost: 0%"

[node name="XPBoostButton" type="Button" parent="C1/ShopItems/XPBoost"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "200g"

[node name="GBoost" type="VBoxContainer" parent="C1/ShopItems"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="C1/ShopItems/GBoost"]
margin_right = 146.0
margin_bottom = 14.0
text = "Gold boost: 0%"

[node name="GBoostButton" type="Button" parent="C1/ShopItems/GBoost"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "200g"

[node name="DmgBoost" type="VBoxContainer" parent="C1/ShopItems"]
margin_left = 300.0
margin_right = 446.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="C1/ShopItems/DmgBoost"]
margin_right = 146.0
margin_bottom = 14.0
text = "Dmg boost: 0%"

[node name="DmgBoostButton" type="Button" parent="C1/ShopItems/DmgBoost"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "200g"

[node name="DefBoost" type="VBoxContainer" parent="C1/ShopItems"]
margin_left = 450.0
margin_right = 596.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="C1/ShopItems/DefBoost"]
margin_right = 146.0
margin_bottom = 14.0
text = "Armor: 0"

[node name="DefBoostButton" type="Button" parent="C1/ShopItems/DefBoost"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "200g"

[node name="Elgato" type="VBoxContainer" parent="C1/ShopItems"]
margin_left = 600.0
margin_right = 746.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="C1/ShopItems/Elgato"]
margin_right = 146.0
margin_bottom = 14.0
text = "First kills boost: 0"

[node name="ElgatoButton" type="Button" parent="C1/ShopItems/Elgato"]
margin_top = 18.0
margin_right = 146.0
margin_bottom = 38.0
text = "200g"
[connection signal="pressed" from="C1/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="C1/ShopItems/XPBoost/XPBoostButton" to="." method="_on_XPBoostButton_pressed"]
[connection signal="pressed" from="C1/ShopItems/GBoost/GBoostButton" to="." method="_on_GBoostButton_pressed"]
[connection signal="pressed" from="C1/ShopItems/DmgBoost/DmgBoostButton" to="." method="_on_DmgBoostButton_pressed"]
[connection signal="pressed" from="C1/ShopItems/DefBoost/DefBoostButton" to="." method="_on_DefBoostButton_pressed"]
[connection signal="pressed" from="C1/ShopItems/Elgato/ElgatoButton" to="." method="_on_ElgatoButton_pressed"]
